# internal/api/server.go
@@ -9,7 +9,6 @@ import (
 	"fmt"
 
 	"errors"
-	"io"
 	"net/http"
 	"strconv"
 )
@@ -27,44 +26,23 @@ type Server struct {
 	Database Store
 }
 
-func (p Server) GetBook(w http.ResponseWriter, r *http.Request) {
+func (p Server) GetBook(ctx context.Context, request *pb.GetBookRequest) (*pb.GetBookResponse, error) {
 
-	ctx := r.Context()
-	log, found := logger.FromContext(ctx)
-	if found == false {
-		handleError(w, http.StatusInternalServerError, errors.New("Проблемы у нас"))
-		return
-	}
-	log.Info("отправляем в ответ книгу")
-	w.Header().Set("Content-Type", "application/json")
-	idstr := r.URL.Query().Get("id")
-	idint, err := strconv.Atoi(idstr)
+	idint := uint(request.Id)
+	result, err := p.Database.GetBookFromDatabaseByRAWSql(ctx, uint(idint))
 	if err != nil {
-		handleError(w, http.StatusBadRequest, err)
-		return
+		fmt.Println("error10") //handleError(w, http.StatusInternalServerError, err)
 	}
-
-	book1, err := p.Database.GetBookFromDatabaseByRAWSql(ctx, uint(idint))
-	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-	}
-
-	data, err := json.Marshal(book1)
-	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-		return
-	}
-	w.Write(data)
+	return &pb.GetBookResponse{Book: &pb.Book{
+		Id:    int64(result.ID),
+		Title: result.Title,
+		Year:  int32(result.Year),
+	}}, nil
 
 }
 
 func (p Server) AddBook(ctx context.Context, request *pb.AddBookRequest) (*pb.AddBookResponse, error) {
-	/*log, found := logger.FromContext(ctx)
-	if found == false {
-		return nil, errors.New("нет логера")
-	}
-	log.Info("сохраняем книгу")
-	*/
+
 	newBook := domain.Book{
 		Title: request.Title,
 		Year:  int(request.Year),
@@ -74,7 +52,7 @@ func (p Server) AddBook(ctx context.Context, request *pb.AddBookRequest) (*pb.Ad
 	if err != nil {
 		return nil, err
 	}
-
+	fmt.Println("книга добавлена")
 	return &pb.AddBookResponse{Book: &pb.Book{
 		Id:    int64(result.ID),
 		Title: result.Title,
@@ -83,47 +61,6 @@ func (p Server) AddBook(ctx context.Context, request *pb.AddBookRequest) (*pb.Ad
 
 }
 
-/*
-func (p Server) AddBook(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-	log, found := logger.FromContext(ctx)
-	if found == false {
-		handleError(w, http.StatusInternalServerError, errors.New("Проблемы у нас"))
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	r.Context()
-	jsong, err := io.ReadAll(r.Body)
-
-	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-		return
-	}
-	var newBook domain.Book
-	err = json.Unmarshal(jsong, &newBook)
-	if err != nil {
-		handleError(w, http.StatusBadRequest, err)
-		return
-	}
-
-	result, err := p.Database.SaveBookToDataBaseByRAWSql(ctx, newBook)
-	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-		return
-	}
-	fmt.Println(result)
-
-	data, err := json.Marshal(result)
-	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-		return
-	}
-	w.Write(data)
-	log.Info("сохраняем книгу")
-} //
-*/
-/*
 func (p Server) AllBooks(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	ctx := r.Context()
@@ -161,91 +98,77 @@ func (p Server) AllBooks(w http.ResponseWriter, r *http.Request) {
 	}
 	log.Info("отправлен ответ")
 }
-*/
-func (p Server) AllBooks(ctx context.Context, request *pb.AllBooksRequest) (*pb.AllBooksResponse, error) {
-	w.Header().Set("Content-Type", "application/json")
-	ctx := r.Context()
-	query := r.URL.Query()
-	limit := query.Get("limit")
 
-	books, err := p.Database.GetAllBookFromDatabaseByRAWSql(ctx)
-	//fmt.Println(books)
-	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-		return
-	}
+/*
+func (p Server) AllBooks(ctx context.Context, r *pb.AllBooksRequest) (*pb.AllBooksResponse, error) {
 
-	if limit != "" {
-		limitNum, err := strconv.Atoi(limit)
+		//ctx := r.Context()
+		//query := r.URL.Query()
+		//limit := query.Get("limit")
+
+		books, err := p.Database.GetAllBookFromDatabaseByRAWSql(ctx)
+		//fmt.Println(books)
 		if err != nil {
-			handleError(w, http.StatusBadRequest, errors.New("invalid limit parameter"))
-			return
+			//	handleError(w, http.StatusInternalServerError, err)
+			fmt.Println(err)
 		}
-		fmt.Println(limitNum)
+		return books, nil
+		//if limit != "" {
+		//	limitNum, err := strconv.Atoi(limit)
+		//	if err != nil {
+		//		handleError(w, http.StatusBadRequest, errors.New("invalid limit parameter"))
+		//		return
+		//	}
+		//	fmt.Println(limitNum)
+		//}
+
+		//data, err := json.Marshal(books)
+		//if err != nil {
+		//	handleError(w, http.StatusInternalServerError, err)
+		//	return
+		//}
+
+		//w.Write(data)
+
+		//log, found := logger.FromContext(ctx)
+		//if found == false {
+		//	handleError(w, http.StatusInternalServerError, errors.New("Проблемы у нас"))
+		//	return
+		//}
+		//log.Info("отправлен ответ")
+	}
+*/
+
+func (p Server) UpdateBook(ctx context.Context, request *pb.UpdateBookRequest) (*pb.UpdateBookResponse, error) {
+
+	newBook := domain.Book{
+		Title: request.Title,
+		Year:  int(request.Year),
 	}
 
-	data, err := json.Marshal(books)
+	err := p.Database.UpDateBookToDataBaseByRAWSql(ctx, newBook)
 	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-		return
+		fmt.Println("книга", request.Id, "обновлена")
 	}
-
-	w.Write(data)
-
-	log, found := logger.FromContext(ctx)
-	if found == false {
-		handleError(w, http.StatusInternalServerError, errors.New("Проблемы у нас"))
-		return
-	}
-	log.Info("отправлен ответ")
+	return &pb.UpdateBookResponse{Book: &pb.Book{
+		Id:    int64(request.Id),
+		Title: request.Title,
+		Year:  int32(request.Year),
+	}}, nil
 }
 
-func (p Server) UpdateBook(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	ctx := r.Context()
-	data, err := io.ReadAll(r.Body)
-	if err != nil {
-		handleError(w, http.StatusInternalServerError, err)
-		return
-	}
-	var book domain.Book
-	err = json.Unmarshal(data, &book)
-	if err != nil {
-		handleError(w, http.StatusBadRequest, err)
-		return
-	}
-	err = p.Database.UpDateBookToDataBaseByRAWSql(ctx, book)
-	if err != nil {
-		handleError(w, http.StatusBadRequest, err)
-		return
-	}
+func (p Server) DeleteBook(ctx context.Context, request *pb.DeleteBookRequest) (*pb.DeleteBookResponse, error) {
+	idint := uint(request.Id)
 
-	log, found := logger.FromContext(ctx)
-	if found == false {
-		handleError(w, http.StatusInternalServerError, errors.New("Проблемы у нас"))
-		return
-	}
-	log.Info("обновили книгу")
-}
+	err := p.Database.DeleteBookFromDatabaseByRAWSql(ctx, idint)
+	if err != nil {
+		fmt.Println("проблема, книга не удалена") // handleError(w, http.StatusBadRequest, err)
 
-func (p Server) DeleteBook(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-	log, found := logger.FromContext(ctx)
-	if found == false {
-		handleError(w, http.StatusInternalServerError, errors.New("Проблемы у нас"))
-		return
 	}
-	w.Header().Set("Content-Type", "application/json")
-	idstr := r.URL.Query().Get("id")
-	idint, err := strconv.Atoi(idstr)
-	if err != nil {
-		handleError(w, http.StatusBadRequest, err)
-		return
-	}
-	err = p.Database.DeleteBookFromDatabaseByRAWSql(ctx, uint(idint))
-	if err != nil {
-		handleError(w, http.StatusBadRequest, err)
-	}
-	w.WriteHeader(http.StatusNoContent)
-	log.Info("удалена книга")
+	fmt.Println("книга удалена")
+
+	return &pb.DeleteBookResponse{
+		Id: int64(request.Id),
+	}, nil
+
 }
